[package]
name = "wait-service"
version = "0.3.2"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.74"
repository = "https://github.com/magiclen/wait-service"
homepage = "https://magiclen.org/wait-service"
keywords = ["wait-for-it", "tcp", "unix", "socket", "uds"]
categories = ["command-line-utilities"]
description = "Wait Service is a pure rust program to test and wait on the availability of multiple services."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4", features = ["derive"] }
concat-with = "0.2"
terminal_size = "0.4"

anyhow = "1"

once_cell = "1.9"

tokio = { version = "1.12", features = ["rt", "time", "net", "sync", "macros"] }

dnsclient = { version = "0.2", default-features = false, features = ["async-tokio"] }

serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dependencies.path-absolutize]
version = "3"
features = ["once_cell_cache"]

[features]
json = ["serde", "serde_json"]
